made some corrections

--- a/css/main.css
+++ b/css/main.css
@@ -12,13 +12,19 @@
    ========================================================================== */
 
 html {
-  color: #01d7de;
-  font-size: 1em;
+  color: #7a4b1d;
+  font-size: 2em;
   line-height: 1.4;
 }
 body {
   background-color: #000000;
 
+}
+th {
+  text-align: center;
+}
+tr {
+  text-align: center;
 }
 /*
  * Remove text-shadow in selection highlight:
