--- a/css/main.css
+++ b/css/main.css
@@ -1,30 +1,34 @@
-/*! HTML5 Boilerplate v8.0.0 | MIT License | https://html5boilerplate.com/ */
-
-/* main.css 2.1.0 | MIT License | https://github.com/h5bp/main.css#readme */
-/*
- * What follows is the result of much research on cross-browser styling.
- * Credit left inline and big thanks to Nicolas Gallagher, Jonathan Neal,
- * Kroc Camen, and the H5BP dev community and team.
- */
-
-/* ==========================================================================
-   Base styles: opinionated defaults
-   ========================================================================== */
-
 html {
-  color: #7a4b1d;
+  color: #0e5408;
   font-size: 2em;
   line-height: 1.4;
 }
 body {
-  background-color: #000000;
-
+  background-color: #b1b1b1;
+  text-align: center;
 }
 th {
   text-align: center;
 }
 tr {
   text-align: center;
+}
+ul {
+  text-align: unset;
+}
+li {
+  text-align: unset;
+}
+.name {
+  text-align: center;
+  margin: auto;
+}
+.joke, a:link {
+        color: #0e5408;
+        background-color: transparent;
+        text-decoration: none
+      ;
+
 }
 /*
  * Remove text-shadow in selection highlight:
@@ -42,7 +46,7 @@ tr {
 }
 
 ::selection {
-  background: #000000;
+  background: #ffffff;
   text-shadow: none;
 }
 
